# flipperzero-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
